[package]
name = "blackjack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
futures = "0.3.31"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
tarpc = { version = "0.35.0", features = ["full"] }
tokio = { version = "1.41.0", features = ["full"] }

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
